# smntin.github.io

./: .gitattributes  .gitignore  CNAME  Gemfile  Procfile  README.md  _config.yml  build.py  index.md  justfile  pyproject.toml  styles.scss
.github/workflows/: ci.yml  github-pages.yml
.helix/: languages.toml
_includes/: badges.html  code-filename.html  comments.html  head.html  projects.html
_layouts/: post.html
_posts/: 2020-04-02-example-content.md  2020-04-03-options.md  2020-04-04-introduction.md  2024-03-24-compositional-reasoning-and-a-car.md  2025-06-30-zig-build-embed.md  2025-06-30-zig-build-nasm.md  2025-07-13-zig-build-embed.md
_projects/: aist.md  bachero.md  forestry-game.md  high-shift-engine.md  huffman-archiver.md  lincheck.md  mtt-lang.md  opencypher-coq.md  path-builder.md  simple-type-checker.md  text-index.md
_sass/: _badges.scss  _base.scss  _code.scss  _pagination.scss  _projects.scss  _variables.scss
assets/: styles.css
blog/: index.html
posts/: 2024-03-24-compositional-reasoning-and-a-car.md  2025-07-13-zig-build-embed.md
templates/: atom.xml  base.html  blog.html  index.html  post.html
